--- a/Data View/Main.storyboard
+++ b/Data View/Main.storyboard
@@ -51,6 +51,8 @@
                                             <rect key="frame" x="92" y="12" width="267" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="267" id="YOL-xg-bCF"/>
+                                                <constraint firstAttribute="height" constant="21" id="fpc-d1-RQs"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="267" id="myo-qh-tGL"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -60,6 +62,8 @@
                                             <rect key="frame" x="92" y="66" width="267" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="267" id="MFy-f6-ne0"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="267" id="is0-VG-JMI"/>
+                                                <constraint firstAttribute="height" constant="21" id="r9H-cO-7Et"/>
                                             </constraints>
                                             <attributedString key="attributedText">
                                                 <fragment content="Author">
